# ZnVis

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  README.rst  dev-requirements.txt  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yaml  flake8.yaml  isort.yaml  lint.yaml  publish-to-pypi.yaml  pytest.yaml
CI/: test_me.py
CI/integration_tests/: test_different_shapes.py  test_simple_spheres.py  test_simple_vector_fields.py
docs/: Makefile  index.html  make.bat
docs/source/: conf.py  index.rst
examples/: My_mesh_0.gltf  My_mesh_0.ply  My_mesh_1.stl  all_shapes.py  custom_mesh.py  dynamic_coloring.py  export_scene.py  growing_sphere_number.py  material_spheres.py  rendering.py  simple_cylinders.py  simple_spheres.py  simple_spheres_box.py  simple_vector_field.py
examples/example_data/: render.py  virus.stl
paper/: paper.bib  paper.md
znvis/: __init__.py
znvis/bounding_objects/: __init__.py  bounding_box.py
znvis/camera_trajectories/: __init__.py  base_trajectory.py  circular_trajectory.py  zooming_trajectory.py
znvis/cameras/: __init__.py  base_camera.py  camera.py  keyframe_camera.py  particle_following_camera.py  static_camera.py  trajectory_camera.py
znvis/material/: __init__.py  material.py
znvis/mesh/: __init__.py  arrow.py  bounding_box.py  box.py  cone.py  custom.py  cylinder.py  icosahedron.py  mesh.py  mobius_loop.py  octahedron.py  sphere.py  tetrahedron.py  torus.py
znvis/mesh_cache/: __init__.py  mesh_cache_manager.py
znvis/parallel_render/: __init__.py  (+2 more)
(+79 files in other folders)
